# sage

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.zig  build.zig.zon  test_runner.zig
bins/sage-editor/: Cargo.toml
bins/sage-editor/src/: main.rs
bins/sage_editor/: main.zig
crates/sage-platform/: Cargo.toml
crates/sage-platform-core/: Cargo.toml
crates/sage-platform-core/src/: lib.rs
crates/sage-platform/src/: error.rs  keyboard.rs  lib.rs  pointer.rs
crates/sage-platform/src/app/: config.rs  ctx.rs  mod.rs  run_error.rs
crates/sage-platform/src/device/: keyboard.rs  mod.rs  pointer.rs
crates/sage-render/: Cargo.toml
crates/sage-render/src/: error.rs  instance.rs  lib.rs
crates/sage-render/src/gpu/: mod.rs  surface.rs
lib/sage-ecs/: Cargo.toml
lib/sage-ecs/src/: column.rs  component.rs  lib.rs  sparse_set.rs
lib/sage-ecs/src/component/: bundle.rs  mod.rs  registry.rs
lib/sage-ecs/src/entity/: id.rs  mod.rs
lib/sage-ecs/src/tables/: column.rs  mod.rs  table.rs
lib/sage-ecs/src/utility/: guard.rs  mod.rs  noop_hash.rs
lib/sage-ecs/src/world/: mod.rs  unsafe_world.rs
libs/sage/: Cargo.toml  sage.zig
libs/sage-color/: Cargo.toml
libs/sage-color/src/: lib.rs  linear_srgb.rs  srgba.rs
libs/sage-core/: Cargo.toml
libs/sage-core/src/: function.rs  lib.rs  opaque_ptr.rs  uuid.rs
libs/sage-core/src/app/: app.rs  app_cell.rs  commands.rs  event.rs  from_app.rs  globals.rs  mod.rs
libs/sage-core/src/entities/: archetype_components.rs  archetype_storage.rs  component.rs  component_list.rs  component_vec.rs  entities.rs  entity.rs  entity_id.rs  mod.rs
libs/sage-core/src/entities/modify_entity/: insert.rs  mod.rs
libs/sage-core/src/schedule/: mod.rs  schedule.rs  system_config.rs
libs/sage-core/src/system/: function_system.rs  mod.rs  query.rs  schedule.rs  system.rs  system_param.rs
libs/sage-hierarchy/: Cargo.toml
libs/sage-hierarchy/src/: lib.rs
libs/sage-ui/: Cargo.toml
libs/sage-ui/src/: background.rs  brush.rs  fonts.rs  lib.rs  ui_node.rs
libs/sage-ui/src/rendering/: mod.rs  rect.rs  rect.wgsl  ui_rect.rs  ui_rect.wgsl  view.rs
libs/sage-ui/src/rendering/text/: atlas.rs  glyph.rs  glyph.wgsl  mod.rs
libs/sage-wgpu/: Cargo.toml
libs/sage-wgpu/src/: globals.rs  lib.rs  renderer.rs
libs/sage-winit/: Cargo.toml
libs/sage-winit/src/: app_runner.rs  event_loop.rs  events.rs  lib.rs  window.rs
libs/sage/src/: lib.rs
libs/sage_core/: Engine.zig  Uuid.zig  sage_core.zig
libs/sage_core/Engine/: ComponentRegistry.zig  EntityAllocator.zig  Table.zig
libs/sage_core/utility/: SparseSet.zig  errors.zig  fold_hash.zig  fxhash.zig  testing_components.zig
libs/sage_input/: Key.zig  sage_input.zig
libs/sage_window/: sage_window.zig
src/: lib.rs  world.rs
src/entities/: add_components.rs  archetype.rs  component.rs  entity_allocator.rs  entity_layout.rs  entity_ptr.rs  entity_table.rs  mod.rs  remove_components.rs
src/query/: mod.rs
tests/: basic.rs
