[workspace]
members = ["libs/*", "bins/*"]
default-members = ["bins/sage-editor"]
resolver = "3"

[workspace.dependencies]
#
# Local Workspace Dependencies
#
sage-core = { path = "libs/sage-core" }
sage-winit = { path = "libs/sage-winit" }
sage = { path = "libs/sage" }

#
# Common dependencies
#
hashbrown = { version = "0.15", default-features = false }
foldhash = { version = "0.1", default-features = false }
