[workspace]
members = ["libs/*", "bins/*"]
default-members = ["bins/sage-editor"]
resolver = "3"

[workspace.dependencies]
#
# Local Workspace Dependencies
#
sage-core = { path = "libs/sage-core" }
sage-winit = { path = "libs/sage-winit" }
sage-wgpu = { path = "libs/sage-wgpu" }
sage-ui = { path = "libs/sage-ui" }
sage-hierarchy = { path = "libs/sage-hierarchy" }
sage-color = { path = "libs/sage-color" }
sage = { path = "libs/sage" }

#
# Common dependencies
#
hashbrown = { version = "0.15", default-features = false }
foldhash = { version = "0.1", default-features = false }
glam = { version = "0.30", default-features = false, features = ["std"] }
bytemuck = { version = "1", default-features = false }
etagere = { version = "0.1", default-features = false }
bitflags = { version = "2", default-features = false }
