[package]
name = "sage-ecs"
version = "0.0.1"
edition = "2021"
description = "The entity component system powering the Sage game engine."

authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["inline-more", "rust-components"]

inline-more = ["hashbrown/inline-more"]
rust-components = []

[dependencies]
hashbrown = { version = "0.14", default-features = false }
fixedbitset = { version = "0.5", default-features = false }
