[package]
name = "sage-core"
edition = "2024"
version = "0.0.1"
description = "The barebones core of the Sage game engine"
authors = ["Nils Mathieu <nils@astralforge.art>"]
license = "MIT"
repository = "https://github.com/TheAstralForge/sage"
keywords = ["game", "engine", "sage"]
categories = []

[dependencies]
hashbrown = { workspace = true, features = ["raw-entry"] }
foldhash.workspace = true
