[package]
name = "sage-hierarchy"
edition = "2024"
version = "0.0.1"
description = "A parent-children hierarchy system for the Sage game engine"
authors = ["Nils Mathieu <nils@astralforge.art>"]
license = "MIT"
repository = "https://github.com/TheAstralForge/sage"
keywords = ["game", "engine", "sage"]
categories = []

[dependencies]
sage-core.workspace = true
