[package]
name = "sage-wgpu"
edition = "2024"
version = "0.0.1"
description = "A wgpu-based rendering backend for the Sage game engine"
authors = ["Nils Mathieu <nils@astralforge.art>"]
license = "MIT"
repository = "https://github.com/TheAstralForge/sage"
keywords = ["game", "engine", "sage", "graphics"]
categories = []

[dependencies]
sage-core.workspace = true

wgpu = "24"
